[package]
name = "ansiform"
version = "0.1.1"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2015"
license = "MIT OR Apache-2.0"
description = "Easily format strings with ANSI colors"
readme = "README.md"
keywords = ["color", "terminal", "ansi", "macro", "format"]
categories = ["command-line-interface"]
repository = "https://github.com/spenserblack/ansiform"
exclude = [
    ".github/*",
    ".editorconfig",
    ".gitignore",
    ".travis.yml",
]

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4"
quote = "1.0"
regex = "1"

[dependencies.syn]
version = "1.0"
default-features = false
features = ["derive", "full", "parsing", "proc-macro"]

[dev-dependencies]
doc-comment = "0.3"
