[package]
name = "yacc"
version = "0.0.1"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Color terminal output with macros"
readme = "README.md"
keywords = ["color", "terminal", "ansi", "macro"]
categories = ["command-line-interface"]
repository = "https://github.com/spenserblack/yacc"

[dependencies]
yacc_impl = { path = "../yacc_impl", version = "0.0.1" }
