[package]
name = "yacc_impl"
version = "0.0.1"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2015"
license = "MIT OR Apache-2.0"
description = "Implementation for yacc"
keywords = ["color", "terminal", "ansi", "macro"]
categories = ["command-line-interface"]
repository = "https://github.com/spenserblack/yacc"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4"
quote = "1.0"
regex = "1"
